[project]
name = "gemini-chat-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "paskn", email = "pashakhin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bertopic[spacy]>=0.17.3",
    "datamapplot>=0.6.4",
    "pandas>=2.0.0",
    "pip>=25.3",
]

[project.scripts]
gemini-chat-tools = "gemini_chat_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "google-api-python-client>=2.185.0",
    "google-auth-oauthlib>=1.2.2",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
